# NilesAI

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .markdownlint.json  .pii-allowlist  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  alembic.ini  pyproject.toml  release-please-config.json  renovate.json  review-app-report.md  review-secure-report.md  tailwind.config.js
.github/: SECURITY.md  pull_request_template.md
.github/workflows/: ci.yml  claude.yml  llm-eval.yml  release-please.yml  sbom.yml
Setup/: 01-lm-studio.md  03-google-calendar.md  03-mailbox-caldav.md  04-whatsapp.md  05-whatsapp-evolution.md  DEPLOYMENT.md
alembic/: env.py
alembic/versions/: 001_baseline.py  002_migrate_contact_phones.py  003_add_notion_rag.py  004_user_google_tokens.py  005_notion_hierarchical_chunks.py  006_notion_metadata_columns.py  007_user_soft_delete.py  008_calendar_user_id.py  009_vikunja_password_synced.py  010_drop_google_calendar.py  011_contacts_per_user.py  012_memory_user_id.py
config/: mcp_servers.yaml  soul.md
config/searxng/: settings.yml
docker/: Caddyfile  Dockerfile.niles  docker-compose-evolution.yml  docker-compose.yml  entrypoint.sh
docker/monitoring/: metrics-proxy.Caddyfile  niles-alerts.yml  prometheus.yml
docs/: 12-factor-app.md  API.md  Architecture.md  DEPLOYMENT.md  Deployment.md  Development.md  LEGAL.md  LLM-Evaluation.md  Niles-Core-Spec.md  Notion-RAG.md  Quality-Assessment.md  RAG.md  Stage-10-Plan.md  alembic.md  daily-weekly-overview.md  search-mcp.md  self-chat.md  web-fetch-mcp.md
docs/Setup/: 02-n8n.md  05-ai-agent.md  06-production.md
docs/_Archive/: Stage-10-Plan.md  konzept.md  todo-integration.md
docs/_Archive/Setup/: 02-n8n.md  05-whatsapp-evolution.md  DEPLOYMENT.md
docs/adr/: ADR-0001-single-worker.md  ADR-0002-dependency-provision.md  ADR-0003-data-access-policy.md  ADR-0004-observability.md
docs/reviews/: implementation-plan-2026-06-15.md
scripts/: backup.sh  benchmark-llm.sh  build.sh  cleanup.sh  dev.sh  import-workflows.sh  notion-status.sh  setup-interactive.sh  start.sh  status.sh  stop.sh  test-e2e.sh  test-integration.sh  test.sh
src/frontend/: README.md
src/niles/: __init__.py  cli.py  config.py  contact_store.py  crypto.py  errors.py  event_store.py  google_token_store.py  http_clients.py  http_retry.py  logging_config.py  main.py  metrics.py  migrate.py  network.py  notion_store.py  redaction.py  settings_store.py  signal_store.py  startup.py  tokens.py  types.py  user_store.py  vikunja_provisioning.py  vikunja_store.py  whatsapp_inbox.py  whatsapp_store.py
src/niles/actions/: admin.py  briefing.py  calendar.py  contacts.py  message_dispatch.py  notion.py  settings.py  signal.py  signal_setup.py  tasks.py  vikunja_setup.py  weather.py  whatsapp.py  whatsapp_setup.py
src/niles/agent/: context.py  core.py  prompts.py  text_tool_parser.py  tool_defs.py
src/niles/agent/tools/: __init__.py  calendar.py  contacts.py  formatting.py  mcp.py  memory.py  notion.py  signal.py  tasks.py  whatsapp.py
src/niles/jobs/: briefing.py
src/niles/mcp/: client.py  user_pool.py
src/niles/mcp/fetch/: __main__.py  server.py
src/niles/mcp/search/: __main__.py  server.py
src/niles/mcp/weather/: __main__.py  server.py
src/niles/memory/: history.py  store.py
src/niles/sources/: echo_guard.py  signal.py  triggers.py  web.py  whatsapp.py
src/niles/sources/web/: __init__.py  _admin.py  _auth.py  _briefing.py  _calendar.py  _chat.py  _contacts.py  _core.py  _deps.py  _legal.py  _notion.py  _settings.py  _signal.py  _vikunja.py  _weather.py  _whatsapp.py
src/niles/static/css/: input.css  style.css
src/niles/static/js/: app.js  theme.js
src/niles/sync/: caldav.py  carddav.py  carddav_manager.py  google_auth.py  ical_parser.py  manager.py  notion.py  notion_embeddings.py  notion_summarizer.py  ollama_embedder.py
src/niles/templates/: admin_users.html  base.html  chat.html  legal.html  login.html  settings.html
src/niles/templates/fragments/: calendar_sources.html  calendar_unavailable.html  calendars.html  carddav_status.html  history.html  message.html  notion_status.html  signal_status.html  toast.html  vikunja_status.html  weather_location.html  whatsapp_status.html
src/niles/templates/macros/: chat_bubble.html
tests/: conftest.py  helpers.py  test_admin_action.py  test_architecture.py  test_briefing.py  test_caldav.py  test_calendar_improvements.py  test_calendar_manager.py  test_carddav.py  test_chat_wa_history.py  test_config.py  test_confirmation.py  test_contacts.py  test_contacts_action_setup.py  test_context_budget.py  test_core.py  test_crypto.py  test_data_isolation.py  test_echo_guard.py  test_encrypted_stores.py  test_error_sanitization.py  test_eval_gate.py  test_features.py  test_fetch_mcp.py  test_google_auth.py  test_google_token_store.py  test_health.py  test_http_retry.py  test_ical_parser.py  test_llm_safety.py  test_logging.py  test_mcp.py  test_memory.py  test_message_dispatch.py  test_migrations.py  test_network.py  test_notion_embeddings.py  test_notion_rag_prompt.py  test_notion_retriever.py  test_notion_summarizer.py  (+29 more)
tests/e2e/: conftest.py  fake_llm.py  judge.py  test_http_e2e.py  test_llm_judge.py  test_tool_pipeline.py
tests/evals/: baseline.json  eval_gate.py  golden_dataset.json  test_llm_evals.py
tests/integration/: conftest.py  test_calendar_integration.py  test_contacts_integration.py  test_mcp_integration.py  test_memory_integration.py  test_notion_integration.py  test_signal_integration.py  test_stores_integration.py  test_tasks_integration.py  test_whatsapp_integration.py
workflows/: Niles-hybrid-with-contacts.json  Niles-hybrid.json  google-calendar.json  mailbox-calendar.json  niles-basic.json  sync-contacts.json
