[project]
name = "niles-core"
version = "0.1.0"
description = "Local AI Butler"
requires-python = ">=3.11"

dependencies = [
    # Web Framework
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",

    # Async HTTP Client
    "httpx>=0.28.1",

    # Database
    "asyncpg>=0.31.0",

    # LLM Client (OpenAI-kompatibel für LM Studio)
    "openai>=2.21.0",

    # MCP SDK
    "mcp>=1.26.0",

    # Config
    "pydantic-settings>=2.13.0",
    "pyyaml>=6.0.3",

    # Scheduling
    "apscheduler>=3.11.2",

    # Web UI (templates + static files)
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",

    # Signed session cookies (Google OAuth)
    "itsdangerous>=2.0",

    # Password hashing (Argon2id)
    "argon2-cffi>=25.1.0",

    # RRULE expansion for recurring calendar events
    "python-dateutil>=2.8.0",

    # Structured JSON logging (12-factor XI)
    "structlog>=24.1.0",

    # Prometheus metrics
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "httpx>=0.28.1",  # For TestClient
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/niles"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
