[project]
name = "niles-core"
version = "0.1.0"
description = "Local AI Butler"
license = "AGPL-3.0-only"
requires-python = ">=3.14"

dependencies = [
    # Web Framework
    "fastapi>=0.129.0",
    "uvicorn[standard]>=0.41.0",

    # Async HTTP Client + Retry
    "httpx>=0.28.1",
    "tenacity>=9.0.0",

    # Database
    "asyncpg>=0.31.0",

    # Database migrations (Alembic runs sync via psycopg2)
    "alembic>=1.13.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",

    # LLM Client (OpenAI-kompatibel für LM Studio)
    "openai>=2.21.0",

    # MCP SDK
    "mcp>=1.26.0",

    # Config
    "pydantic-settings>=2.13.0",
    "pyyaml>=6.0.3",

    # Scheduling
    "apscheduler>=3.11.2",

    # Web UI (templates + static files)
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",

    # Signed session cookies (Google OAuth)
    "itsdangerous>=2.0",

    # Password hashing (Argon2id)
    "argon2-cffi>=25.1.0",

    # RRULE expansion for recurring calendar events
    "python-dateutil>=2.8.0",

    # Structured JSON logging (12-factor XI)
    "structlog>=24.1.0",

    # Prometheus metrics
    "prometheus-client>=0.21.0",

    # WebSocket client (Signal integration)
    "websockets>=14.0",

    # MCP Web Search is built-in (src/niles/mcp/search)

    # HTML text extraction for web fetch MCP server
    "trafilatura>=2.0.0",

    # Robust JSON repair for malformed LLM tool-call output
    "json-repair>=0.58.0",

    # Notion workspace integration (RAG pipeline)
    "notion-client>=2.0.0",

    # Column-level credential encryption (Fernet AES-128-CBC + HMAC)
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.1",  # For TestClient
    "mypy>=1.14.0",
    "pip-audit>=2.7.0",
    "ruff>=0.9.0",
    "anthropic>=0.40",  # Claude-as-Judge E2E tests
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/niles"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires Docker Compose infrastructure (deselect with -m 'not integration')",
    "e2e: end-to-end agent pipeline tests (deselect with -m 'not e2e')",
    "llm_judge: requires Ollama + Claude API key, slow (deselect with -m 'not llm_judge')",
]

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "S"]
ignore = ["E501"]  # Line length handled by ruff format

[tool.ruff.lint.per-file-ignores]
# Tests legitimately use assert, hardcoded credentials, verify=False, and try-except-pass
"tests/**/*.py" = ["S101", "S105", "S106", "S110", "S501"]
# Web route handlers use assert for type narrowing after auth checks
"src/niles/sources/web/_admin.py" = ["S101"]
"src/niles/sources/web/_chat.py" = ["S101"]
"src/niles/sources/web/_contacts.py" = ["S101"]
"src/niles/sources/web/_core.py" = ["S101"]
"src/niles/sources/web/_settings.py" = ["S101"]
"src/niles/sources/web/_vikunja.py" = ["S101"]
"src/niles/sources/web/_whatsapp.py" = ["S101"]
# CalDAV: XML parsing from authenticated internal CalDAV servers (not untrusted)
"src/niles/sync/caldav.py" = ["S314"]
# Dynamic SQL uses parameterized queries (where_clause built from internal logic, not user input)
"src/niles/actions/contacts.py" = ["S608"]

[tool.mypy]
python_version = "3.14"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
check_untyped_defs = false

# Type overrides — tightened incrementally; see docs/Quality-Assessment.md Phase 1
# Removed: niles.sources.web (typed AppState eliminates union-attr)
# Removed: niles.sync.caldav (fixed _base_url pattern)
# Reduced: niles.sync.carddav (fixed assignment/operator, attr-defined remains)
# Reduced: niles.sync.manager (fixed operator, arg-type remains)
[[tool.mypy.overrides]]
module = "niles.sync.manager"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "niles.main"
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "niles.sync.ical_parser"
disable_error_code = ["var-annotated", "assignment", "union-attr", "import-untyped"]

[[tool.mypy.overrides]]
module = "niles.sync.carddav"
disable_error_code = ["attr-defined"]

[[tool.mypy.overrides]]
module = "niles.agent.core"
disable_error_code = ["index", "assignment", "call-overload", "union-attr", "no-redef"]

[[tool.mypy.overrides]]
module = "niles.agent.prompts"
disable_error_code = ["assignment", "union-attr"]

[[tool.mypy.overrides]]
module = "niles.jobs.briefing"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "niles.actions.tasks"
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "niles.cli"
disable_error_code = ["call-arg"]

[[tool.mypy.overrides]]
module = "niles.mcp.client"
disable_error_code = ["import-untyped"]

[tool.coverage.run]
source = ["src/niles"]
omit = ["tests/*", "alembic/*"]

[tool.coverage.report]
show_missing = true
fail_under = 65
exclude_lines = [
    "pragma: no cover",
    "if __name__",
    "if TYPE_CHECKING",
]
